[package]
name = "async-lease"
version = "0.1.2"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jonhoo/async-lease"
repository = "https://github.com/jonhoo/async-lease"
description = "Essentially a futures-oriented Arc<Mutex<Option<T>>>"
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "jonhoo/async-lease" }
codecov = { repository = "jonhoo/async-lease", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures = "0.1"
tokio-sync = "0.1"

[dev-dependencies]
tokio-mock-task = "0.1"
