[package]
name = "async-lease"
version = "0.2.0-alpha.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jonhoo/async-lease"
repository = "https://github.com/jonhoo/async-lease"
description = "Essentially a futures-oriented Arc<Mutex<Option<T>>>"
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "jonhoo/async-lease" }
codecov = { repository = "jonhoo/async-lease", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
tokio-sync = "0.2.0-alpha.6"

[dev-dependencies]
tokio-test = "0.2.0-alpha.6"
